[package]
name = "flock_asm"
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flock_bytecode = { path = "../flock_bytecode", version = "0.1.0" }
flock_vm = { path = "../flock_vm", version = "0.1.0" }

nom = "6"
structopt = "*"
gflags = "0.3.7"
