[package]
name = "flock_vm"
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flock_bytecode = { path = "../flock_bytecode", version = "0.1.0" }
flock_rpc = { path = "../flock_rpc", version = "0.1.0" }
num_cpus = "1.13.0"
rand = "0.8.0"
serde = {version = "1.0.119", features = ["derive"]}
flume = "0.10.1"
dashmap = "4.0.2"
gflags = "0.3.7"
