[package]
name = "flock_vm"
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flock_bytecode = { path = "../flock_bytecode", version = "0.1.0" }
flock_rpc = { path = "../flock_rpc", version = "0.1.0" }
num_cpus = "1.13.0"
rand = "0.8.0"
serde = {version = "1.0.119", features = ["derive"]}
flume = "0.10.1"
dashmap = "4.0.2"
gflags = "0.3.7"
tarpc = { version = "0.24", features = ["serde-transport", "tcp", "tokio1"] }
tokio-serde = { version = "0.8", features = ["json", "bincode"] }
futures = { version = "0.3.12", features = ["executor"] }
lazy_static = "1.4.0"
tokio = { version = "1.0.2", features = ["rt", "macros"] }
log = "0.4.13"
pretty_env_logger = "0.4.0"
